# the-holy-hand-grenade-of-antioch

./: .dockerignore  .envrc.example  .gitignore  Makefile  README.md  STEP_BY_STEP.md  docker-compose.yml
.github/: dependabot.yml
backend/: .editorconfig  .eslintrc.json  .gitignore  .prettierrc.json  Dockerfile  Dockerfile.npm_backend  package.json  postcss.config.js  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  tsconfig.json  webpack.config.js
backend/apps/blog/tests/: test_blog_drf_fbvs.py
backend/apps/core/: tasks.py  utils.py  views.py
backend/apps/core/management/commands/: start_celery_worker.py
backend/apps/core/templates/: bootstrap-cheatsheet.html  index.html  kitchen-sink.html  nav.html
backend/apps/core/urls/: mtv_urls.py
backend/backend/: urls.py
backend/backend/settings/: base.py  test.py
backend/scripts/aws/: ssm_port_forward.sh
backend/src/: app.ts  effects.ts  global-old.js  init-flatpickr.ts  init-fullcalendar.ts  navbar.ts  styles.ts
backend/src/assets/styles/: app.scss  breakpoints.scss  fonts.scss  switch.scss
backend/src/assets/styles/fonts/: roboto-black.scss  roboto-bold.scss  roboto-condensed-bold.scss  roboto-condensed-light.scss  roboto-condensed-regular.scss  roboto-light.scss  roboto-medium.scss  roboto-regular.scss  roboto-slab-bold.scss  roboto-slab-light.scss  roboto-slab-regular.scss  roboto-slab-thin.scss  roboto-thin.scss
backend/src/tools/: media-query-listener.ts
backend/static/openapi/: schema.yml
backend/templates/: base.html
backend/types/: custom.d.ts
(+40 files in other folders)
